--- a/local_eat/web/src/app/components/profile/profile.component.html
+++ b/local_eat/web/src/app/components/profile/profile.component.html
@@ -85,4 +85,4 @@
   </div>
 </div>
 
-<app-products-management></app-products-management>
+<app-products-management *ngIf="haveCompany"></app-products-management>
