--- a/local_eat/web/src/app/components/products/products.component.html
+++ b/local_eat/web/src/app/components/products/products.component.html
@@ -1,22 +1,20 @@
 <app-nav></app-nav>
 
 <ng-container *ngIf="{products: productsList$ | async, productsError: productsError$ | async} as vm">
-    <div *ngIf="!vm.productsError && vm.products as products; else loading" class="row">
-        <div *ngFor="let product of products" class="col s12">
-            <ul class="col s2">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" [src]="'assets/' + product.picture">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">{{product.name}}</span>
-                        <p><a href="#">plus d'informations</a></p>
-                    </div>
-                    <div class="card-action">
-                        <a href="#">Producteurs</a>
-                    </div>
+    <div *ngIf="!vm.productsError && vm.products as products; else loading" class="card-container">
+        <div *ngFor="let product of products" class="card-item">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" [src]="'assets/products/' + product.picture">
                 </div>
-            </ul>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">{{product.name}}</span>
+                    <p><a href="#">plus d'informations</a></p>
+                </div>
+                <div class="card-action">
+                    <a href="#">Producteurs</a>
+                </div>
+            </div>
         </div>
     </div>
     <p *ngIf="vm.productsError as error">{{ error }}</p>
