--- a/local_eat/web/src/app/components/products/products.component.scss
+++ b/local_eat/web/src/app/components/products/products.component.scss
@@ -16,3 +16,32 @@
         transform: rotate(.5turn)
     }
 }
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px; /* Adjust the gap as needed */
+  }
+  
+  .card-item {
+    flex: 1 1 calc(10% - 16px); /* 4 items per row with gap */
+    box-sizing: border-box;
+  }
+  
+  @media (max-width: 992px) {
+    .card-item {
+      flex: 1 1 calc(33.333% - 16px); /* 3 items per row on medium screens */
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .card-item {
+      flex: 1 1 calc(50% - 16px); /* 2 items per row on smaller screens */
+    }
+  }
+  
+  @media (max-width: 600px) {
+    .card-item {
+      flex: 1 1 100%; /* 1 item per row on small screens */
+    }
+  }
+  
